responsive solo para celulares

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="pomodoro-conteiner">
         <div class="conteiner-ciclos">
-            <label for="input-ciclos"><img class="foto-tomate" src="/img/tomate.png" alt="tomate"> </label>
+            <label for="input-ciclos"><img class="foto-tomate" src="./img/tomate.png" alt="tomate"> </label>
             <input id="input-ciclos" type="number" value="1">
         </div>
         <div class="conteiner-reloj">
